# oe-tc-project-alpha

./: .gitignore  README.md  analyze.py  configs.py  defaults.py  evaluate.py  geometry.py  log.py  physics.py  pyproject.toml  run.py  run_simulation.py  sample.py  storage.py  system.py  system_test.py  test.py  test2.py  thermal_quench.py  utils.py  visualize.py
.github/workflows/: tests.yml
benchmarks/: benchmark.py
docs/: model_draft3.tex
docs/experiments/: stochastic_conduction_validation_2026-07-23.md  thermal_balance_2026-07-22.md  thermal_quench_2026-07-22.md
legacy/: README.md
legacy/early_prototype/: defaults.py  physics.py  system.py  system_test.py  test2.py
legacy/previous_model/: configs.py  evaluate.py  geometry.py  physics.py  sample.py  storage.py  system.py  utils.py  visualize.py
legacy_code/: geometry.py  sample.py  test.py  utils.py
oe_tc/: __init__.py  backend.py  bath.py  bonds.py  conduction.py  config.py  evaluation.py  geometry.py  initialization.py  metrics.py  molecules.py  random.py  runner.py  scheduler.py  simulation.py  source.py  state.py  storage.py  thermodynamics.py  topology.py  validation.py  version.py  visualization.py
scripts/: setup_wsl_cuda.sh  verify_cuda.py
tests/simulation/: __init__.py  reference.py  test_analyze.py  test_analyze_winding.py  test_bath.py  test_bonds.py  test_conduction.py  test_config.py  test_evaluation.py  test_geometry.py  test_initialization.py  test_metrics.py  test_molecules.py  test_package.py  test_random.py  test_runner.py  test_runner_convergence.py  test_runner_limits.py  (+10 more)
