[build-system]
requires = ["setuptools>=83,<84"]
build-backend = "setuptools.build_meta"

[project]
name = "oe-tc-project-alpha"
version = "0.2.0"
description = "Large-scale JAX experiments in driven thermodynamic self-organization"
requires-python = ">=3.12"
dependencies = [
  "jax>=0.11,<0.12",
  "numpy>=2.5,<3",
  "h5py>=3.16,<4",
]

[project.optional-dependencies]
visualization = [
  "matplotlib>=3.11,<3.12",
  "pillow>=12.3,<13",
  "imageio-ffmpeg>=0.6,<0.7",
]
dev = [
  "pytest>=9.1,<10",
  "matplotlib>=3.11,<3.12",
  "pillow>=12.3,<13",
  "imageio-ffmpeg>=0.6,<0.7",
]

[tool.setuptools]
packages = ["oe_tc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
